--- a/prototype/package.json
+++ b/prototype/package.json
@@ -4,15 +4,20 @@
   "description": "- 자바스크립트는 기존의 객체를 복사해서 새로운 객체를 생성하는 프로토타입 기반의 언어",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "babel src -d lib && browserify lib/index.js -o bundle.js",
+    "build-webpack": "webpack"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/cli": "^7.6.2",
     "@babel/core": "^7.6.2",
+    "@babel/plugin-transform-runtime": "^7.6.2",
     "@babel/preset-env": "^7.6.2",
+    "babel-loader": "8",
     "browserify": "^16.5.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@babel/runtime": "^7.6.2"
+  }
 }
